@@ -1,5 +1,12 @@
 2008-10-29  Richard Hult  <richard@imendio.com>
 
+	* src/quartz-style.c: Change get_context so it takes the window
+	and handle pixmaps as well. Remove the special cases since they
+	are not needed anymore. Add release_context and do the same
+	special casing in there.
+
+2008-10-29  Richard Hult  <richard@imendio.com>
+
 	* theme/gtkrc: Change menu icon size to 16x16.
 
 2008-10-29  Richard Hult  <richard@imendio.com>
